--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,21 +1,23 @@
-astroid==2.2.5
-Click==7.0
-ecdsa==0.13.3
-Flask==1.0.2
-Flask-SQLAlchemy==2.4.0
-future==0.17.1
-isort==4.3.18
+-i https://pypi.org/simple
+astroid==2.4.2
+click==7.1.2
+ecdsa==0.15
+flask-cors==3.0.8
+flask-sqlalchemy==2.4.3
+flask==1.1.2
+future==0.18.2
+isort==4.3.21
 itsdangerous==1.1.0
-Jinja2==2.10.1
-lazy-object-proxy==1.4.0
-MarkupSafe==1.1.1
+jinja2==2.11.2
+lazy-object-proxy==1.4.3
+markupsafe==1.1.1
 mccabe==0.6.1
-pycryptodome==3.6.6
-pylint==2.3.1
+pycryptodome==3.3.1
+pylint==2.5.3
 python-jose-cryptodome==1.3.2
-six==1.12.0
-SQLAlchemy==1.3.3
-typed-ast==1.3.5
-Werkzeug==0.15.3
-wrapt==1.11.1
-Flask-Cors==3.0.8
+six==1.15.0
+sqlalchemy==1.3.18
+toml==0.10.1
+typed-ast==1.4.1
+werkzeug==1.0.1
+wrapt==1.12.1
