Updating Package Dependencies

--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -9,6 +9,7 @@ verify_ssl = true
 astroid = "*"
 click = "*"
 ecdsa = "*"
+flask-cors = "*"
 future = "*"
 isort = "*"
 itsdangerous = "*"
@@ -18,15 +19,15 @@ pycryptodome = "*"
 pylint = "*"
 python-jose-cryptodome = "*"
 six = "*"
+toml = "*"
 typed-ast = "*"
 wrapt = "*"
-Flask = "*"
 Flask-SQLAlchemy = "*"
+Flask = "*"
 Jinja2 = "*"
 MarkupSafe = "*"
 SQLAlchemy = "*"
 Werkzeug = "*"
-Flask-Cors = "*"
 
 [requires]
 python_version = "3.8"
